--- a/features.html
+++ b/features.html
@@ -204,56 +204,55 @@
 
 
 
-        <div class="footer">
-            <div class="footer-box">
-            <div class="row1">
-          <div class="footer-col1">
-           <div class="logo-box">
-         <img class="logo" src="./images/Group 28.png" alt="">  
-          <img src="./images/FS Poster.png" alt=""></div>
-          <p>FS Poster - WordPress auto poster and scheduler plugin.</p>
-          </div>
-          <div class="footer-col">
-            <h3 class="foothead">Company</h3>
-            <h6>Home</h6>
-            <h6>Buy now </h6>
-            <h6>Blog</h6>
-            <h6>Demo</h6>
-            <h6>FAQ</h6>
-          </div>
-          <div class="footer-col">
-            <h3 class="foothead">Product</h3>
-            <h6>Refund</h6>
-            <h6>Documentation </h6>
-            <h6>Support</h6>
-            <h6>Video tutorials</h6>
-            <h6>Suggest a feature</h6>
-          </div>
-          <div class="footer-col contact">
-            <h3 class="foothead">Contact</h3>
-           <a class="mail">
-            <img src="./images/mail.png" alt="">
-            info@fs-poster.com
-           </a>
-          <div class="social-media">
-            <img src="./images/Group 4.png" alt="">
+    <div class="footer">
+        <div class="footer-box">
+        <div class="row1">
+      <div class="footer-col1">
+       <div class="logo-box">
+     <img class="logo" src="./images/Group 28.png" alt="">  
+      <img src="./images/FS Poster.png" alt=""></div>
+      <p>FS Poster - WordPress auto poster and scheduler plugin.</p>
+      </div>
+      <div class="footer-col">
+        <h3 class="foothead">Company</h3>
+        <h6>Home</h6>
+        <h6>Buy now </h6>
+        <h6>Blog</h6>
+        <h6>Demo</h6>
+        <h6>FAQ</h6>
+      </div>
+      <div class="footer-col">
+        <h3 class="foothead">Product</h3>
+        <h6>Refund</h6>
+        <h6>Documentation </h6>
+        <h6>Support</h6>
+        <h6>Video tutorials</h6>
+        <h6>Suggest a feature</h6>
+      </div>
+      <div class="footer-col contact">
+        <h3 class="foothead">Contact</h3>
+       <a class="mail">
+        <img src="./images/mail.png" alt="">
+        info@fs-poster.com
+       </a>
+      <div class="social-media">
+        <img src="./images/Group 4.png" alt="">
+    </div>
+       
+      </div>
+      </div>
+      <div class="row2">
+        <div class="copyright">
+            <img src="./images/copyright.png" alt="">
+            <p>FS Poster 2021. All Rights Reserved</p>
+       </div>
+        <div class="privacy">
+            <a href="">Terms and Conditions </a>
+            <a href="">Privacy policy</a>
         </div>
-           
-          </div>
-          </div>
-          <div class="row2">
-            <div class="copyright">
-                <a href="">
-                <img src="./images/copyright.png" alt="">
-                <p>FS Poster 2021. All Rights Reserved</p></a>
-           </div>
-            <div class="privacy">
-                <a href="">Terms and Conditions </a>
-                <a href="">Privacy policy</a>
-            </div>
-          </div>
-          </div>
-        </div>
+      </div>
+      </div>
+    </div>
 
 </body>
 </html>
