--- a/index.html
+++ b/index.html
@@ -393,8 +393,6 @@ Why are you waiting? Try the free demo!</p></div>
 </div>
 </div> 
 </div>
-
-
 <div class="footer">
     <div class="footer-box">
     <div class="row1">
@@ -434,9 +432,8 @@ Why are you waiting? Try the free demo!</p></div>
   </div>
   <div class="row2">
     <div class="copyright">
-        <a href="">
         <img src="./images/copyright.png" alt="">
-        <p>FS Poster 2021. All Rights Reserved</p></a>
+        <p>FS Poster 2021. All Rights Reserved</p>
    </div>
     <div class="privacy">
         <a href="">Terms and Conditions </a>
@@ -445,6 +442,7 @@ Why are you waiting? Try the free demo!</p></div>
   </div>
   </div>
 </div>
+
 
 </body>
 </html>
