--- a/faq.html
+++ b/faq.html
@@ -126,13 +126,13 @@
           </div> 
           </div>
 
+          <div class="footer">
             <div class="footer-box">
             <div class="row1">
           <div class="footer-col1">
            <div class="logo-box">
          <img class="logo" src="./images/Group 28.png" alt="">  
-          <img src="./images/FS Poster.png" alt="">
-        </div>
+          <img src="./images/FS Poster.png" alt=""></div>
           <p>FS Poster - WordPress auto poster and scheduler plugin.</p>
           </div>
           <div class="footer-col">
@@ -143,7 +143,7 @@
             <h6>Demo</h6>
             <h6>FAQ</h6>
           </div>
-          <div class="footer-col contact">
+          <div class="footer-col">
             <h3 class="foothead">Product</h3>
             <h6>Refund</h6>
             <h6>Documentation </h6>
@@ -151,12 +151,12 @@
             <h6>Video tutorials</h6>
             <h6>Suggest a feature</h6>
           </div>
-          <div class="footer-col">
+          <div class="footer-col contact">
             <h3 class="foothead">Contact</h3>
-           <div class="mail">
+           <a class="mail">
             <img src="./images/mail.png" alt="">
             info@fs-poster.com
-           </div>
+           </a>
           <div class="social-media">
             <img src="./images/Group 4.png" alt="">
         </div>
@@ -165,15 +165,16 @@
           </div>
           <div class="row2">
             <div class="copyright">
-              <img src="./images/copyright.png" alt="">
+                <img src="./images/copyright.png" alt="">
                 <p>FS Poster 2021. All Rights Reserved</p>
            </div>
             <div class="privacy">
-                <div>Terms and Conditions </div>
-                <div >Privacy policy</div>
+                <a href="">Terms and Conditions </a>
+                <a href="">Privacy policy</a>
             </div>
           </div>
           </div>
+        </div>
     
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
